@@ -203,6 +203,15 @@ fdd_read_write_data( fdd_t *d, fdd_write_t write )
 }
 
 void
+fdd_wrprot( fdd_t *d, int wrprot )
+{
+  if( !d->loaded )
+    return;
+
+  d->wrprot = d->disk->wrprot = wrprot;
+}
+
+void
 fdd_wait_index_hole( fdd_t *d )
 {
   if( !d->loaded )
