@@ -159,12 +159,18 @@ typedef enum ui_menu_item {
   UI_MENU_ITEM_MEDIA_DISK_PLUS3_B_EJECT,
   UI_MENU_ITEM_MEDIA_DISK_BETA,
   UI_MENU_ITEM_MEDIA_DISK_BETA_A_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_BETA_A_WP_SET,
   UI_MENU_ITEM_MEDIA_DISK_BETA_B_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_BETA_B_WP_SET,
   UI_MENU_ITEM_MEDIA_DISK_BETA_C_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_BETA_C_WP_SET,
   UI_MENU_ITEM_MEDIA_DISK_BETA_D_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_BETA_D_WP_SET,
   UI_MENU_ITEM_MEDIA_DISK_PLUSD,
   UI_MENU_ITEM_MEDIA_DISK_PLUSD_1_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_PLUSD_1_WP_SET,
   UI_MENU_ITEM_MEDIA_DISK_PLUSD_2_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_PLUSD_2_WP_SET,
   UI_MENU_ITEM_MEDIA_IDE,
   UI_MENU_ITEM_MEDIA_IDE_SIMPLE8BIT,
   UI_MENU_ITEM_MEDIA_IDE_SIMPLE8BIT_MASTER_EJECT,
